@@ -4,6 +4,11 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/08/24
+	* script command "isrefine" will no longer return always false for equip
+	  positions above 6 (this has not been needed since the addition of the
+	  refine column to tbe item_db many months ago) [Skotlex]
+	* Added NPC_CRITICALSLASH to the list of skills that display as a normal
+	  attack. [Skotlex]
 	* Reverted the previous change, changed the pet capture code to try to
 	  capture a mob based on their view class rather than actual class.
 	  [Skotlex]
